# dotswitch

./: README.md  pyproject.toml
src/dotswitch/: cli.py  paths.py  profiles.py  state.py
