[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "dotswitch"
version = "0.1.0"
description = "Modular profile switcher for Hyprland dotfile setups"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
  { name = "Ghost-Djs" }
]
dependencies = []

[project.scripts]
dotswitch = "dotswitch.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
